# 15201-pleshkov-net5

./: CMakeLists.txt  agreements.h  check_strings.c  check_strings_inner.h  client.c  client.h  cmake_install.cmake  cur_clients.c  cur_clients.h  get_task.c  get_task.h  handlers.c  handlers.h  main.c  protocol.h  server.c  server.h  task_maker.c  task_maker.h  types.h
client/: CMakeLists.txt  client.c  client.h  client_main.c
client/md5-cracker/: md5-cracker-inner.h  md5-cracker.c  md5-cracker.h
md5-cracker/: md5-cracker.c  md5-cracker.h
server/: CMakeLists.txt  cur_clients.c  cur_clients.h  handlers.c  handlers.h  i-server.h  server.c  server.h  server_main.c  sock_polls.c  sock_polls.h  success.c  success.h
server/cur_clients/: client_type.h  cur_clients.c  cur_clients.h
server/sock_polls/: sock_polls.c  sock_polls.h
server/success/: success.c  success.h
server/task_manager/: task_manager.c  task_manager.h
server/task_manager/str_gen/: i-str_gen.h  str_gen.c  str_gen.h
server/task_manager/task_list/: task.c  task.h  task_list.c  task_list.h
task_manager/: str_gen.c  str_gen.h  task_list.c  task_list.h  task_manager.c  task_manager.h
utils/: CMakeLists.txt  memcpy_next.c  print_uuid.c  print_uuid.h  sock_utils.c  sock_utils.h
utils/include/: logger.h  memcpy_next.h  print_uuid.h  sock_utils.h
utils/src/: logger.c  memcpy_next.c  print_uuid.c  sock_utils.c
